--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,65 @@
                 </div>  <!-- end of row-->
             </div> <!-- end of container-->
 
+   <!--Start of Portfolio picts; 3 rows each w/ 2 columns-->
+
+
+
+   <div class="row">  <!--row 1-->
+
+    <div class="col-md-4">
+                <img src="1.jpg" alt="Hangman" class="img-thumbnail">
+                <p class="bg-info text-white h6">Hangman</p>
+             </div> <!-- end of internal column 1 with picture & paragraph-->
+
+    <div class="col-md-4">
+                <img src="2.jpg" alt="RPG" class="img-thumbnail" height="100%">
+                <p class=" text-responsive bg-info text-white h6">RPG</p>
+    </div>   <!-- end of internal column 2 w/ picture & paragraph-->
+</div> <!-- end of row 1-->
+
+
+<div class="row">  <!--row 2-->
+
+     <div class="col-md-4">
+             <img src="3.jpg" alt="Trivia" class="img-thumbnail">
+             <p class="bg-info text-white h6">Trivia</p>
+          </div> <!-- end of internal column 1 with picture & paragraph-->
+
+     <div class="col-md-4">
+             <img src="4.jpg" alt="Widgets" class="img-thumbnail">
+             <p class="bg-info text-white h6">Widgets</p>
+     </div>   <!-- end of internal column 2 w/ picture & paragraph-->
+ </div> <!-- end of row 2-->
+
+ <div class="row">  <!--row 3; single picture w/ 2 blank columns-->
+
+     <div class="col-md-4">
+             <img src="5.jpg" alt="Trivia" class="img-thumbnail">
+             <p class="bg-info text-white h6">Rock Paper Scissors</p>
+         </div> <!-- end of internal column 1 with picture & paragraph-->
+
+     <div class="col-md-4"> <!--Empty column-->
+         </div>   <!-- end of internal column 2-->
+ </div> <!-- end of row 3-->
+
+<div class="col-md-2">  <!-- This is external column 3 of 3 - Empty -->
+</div> <!-- end of external column 3-->
+
+
+<!--Start of the Footer & Copyright-->
+
+<div class="row">
+<div class="col-md-12 bg-info"> <!--This is turquoise line-->
+</div>
+
+<div class="col-md-12 p-3 mb-2 bg-secondary text-white blockquote text-center">Copyright &copy;</div>">
+</div>
+</div> <!--end of the Footer & Copyright-->
+
+</div> <!-- end of container-->
+</body>
+</html>         
        
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
